--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -59,9 +60,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
 
     // Dagger2
-    implementation "com.google.dagger:dagger:2.28"
-    kapt "com.google.dagger:dagger-compiler:2.28"
-    implementation "com.google.dagger:dagger-android:2.24"
-    implementation "com.google.dagger:dagger-android-support:2.24"
-    kapt "com.google.dagger:dagger-android-processor:2.21"
+    // Dagger_hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version" // 必須
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version" // 必須
+
+    def dagger_hilt_view_model_version = "1.0.0-alpha02"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:${dagger_hilt_view_model_version}"
+    kapt "androidx.hilt:hilt-compiler:${dagger_hilt_view_model_version}"
 }
